Initial html, and sub context

--- a/Favorite_Places.html
+++ b/Favorite_Places.html
@@ -7,11 +7,14 @@
 <body>
   <h1>My Favorite Places!</h1>
 
-  <p>Here's a list of some of my favorite places:</p>
+  <p>Here's a list of some of my <strong>favorite places:</strong></p>
   <ul>
     <li>Germany</li>
+    <img src="Germany.jpg" alt="A photo of old germanic structures">
     <li>Hawaii</li>
+    <img src="Hawaii.jpg" alt="A photo of a beach at sunset">
     <li>Australia</li>
+    <img src="Australia.jpg" alt="A photo of Sydney Australia at midday">
   </ul>
 
 </body>
